<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="30sp"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:paddingTop="30sp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp"
        android:text="@string/list_single_default_title"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp"
        android:text="@string/list_single_default_subtitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_single_default_summary"
        android:textSize="14sp"
        android:textStyle="normal" />

</TableLayout>